tests/ui/dyn-star/float-as-dyn-star.stderr
warning: the feature `dyn_star` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/float-as-dyn-star.rs:3:12
   |
LL | #![feature(dyn_star, pointer_like_trait)]
   |            ^^^^^^^^
   |
   = note: see issue #102425 <https://github.com/rust-lang/rust/issues/102425> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: `f64` needs to have the same ABI as a pointer
  --> $DIR/float-as-dyn-star.rs:10:5
   |
LL |     f32::from_bits(0x1) as f64
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ `f64` needs to be a pointer-like type
   |
   = help: the trait `PointerLike` is not implemented for `f64`
   = help: the trait `PointerLike` is implemented for `usize`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
